#PK-685 Website-Settings related entities

--- a/src/Kooco.Pikachu.Blazor/Pages/WebsiteManagement/AddWebsiteSettings.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/WebsiteManagement/AddWebsiteSettings.razor
@@ -24,9 +24,9 @@
 @inject IUiNotificationService UiNotificationService
 @inject IImageAppService ImageAppService
 @inject AbpBlazorMessageLocalizerHelper<PikachuResource> LH
-@inject IItemAppService _itemAppService
-@inject ISetItemAppService _setItemAppService
-@inject ImageContainerManager _imageContainerManager
+@inject IItemAppService ItemAppService
+@inject ISetItemAppService SetItemAppService
+@inject ImageContainerManager ImageContainerManager
 @inject IProductCategoryAppService ProductCategoryAppService
 @inject IWebsiteBasicSettingAppService WebsiteBasicSettingAppService
 
