--- a/src/Kooco.Pikachu.Blazor/Pages/WebsiteManagement/EditWebsiteSettings.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/WebsiteManagement/EditWebsiteSettings.razor
@@ -18,7 +18,7 @@
     @L["WebsiteSettings"]
 </PikachuButton>
 
-<Div Class="rounded-cards website-settings">
+@* <Div Class="rounded-cards website-settings">
     <Card>
         <CardBody>
             @if (EditingEntity != null)
@@ -174,4 +174,4 @@
             </PikachuButton>
         </Div>
     }
-</Div>
+</Div> *@
