--- a/src/Kooco.Pikachu.Blazor/Pages/WebsiteManagement/WebsiteSettings.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/WebsiteManagement/WebsiteSettings.razor
@@ -40,7 +40,7 @@
             </Column>
             <Column ColumnSize="ColumnSize.Is2">
                 <Button Class="btn-outline-primary w-100" Clicked="(() => FiltersVisible = !FiltersVisible)">
-                    @L["AdvanceFilters"]
+                    @L["Filters"]
                     <Icon Class="@("ms-1 fas " + (FiltersVisible ? "fa-angles-up" : "fa-angles-down"))"></Icon>
                 </Button>
             </Column>
