--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
@@ -973,6 +973,12 @@
                     <ColorPicker Class="color-scheme" @bind-Color="@EditGroupBuyDto.AlertColor" />
                     <TextEdit Disabled @bind-text="EditGroupBuyDto.AlertColor" class="form-control mt-2" />
                 </Div>
+
+                <Div Class="col-2">
+                    <label class="form-label">@L["Block"]</label>
+                    <ColorPicker Class="color-scheme" @bind-Color="@EditGroupBuyDto.BlockColor" />
+                    <TextEdit Disabled @bind-text="EditGroupBuyDto.BlockColor" class="form-control mt-2" />
+                </Div>
             </Div>
         }
 
