#PK-682 API - Footer settings page

--- a/src/Kooco.Pikachu.Blazor/Pages/WebsiteManagement/TopbarSettings.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/WebsiteManagement/TopbarSettings.razor
@@ -2,7 +2,7 @@
 @using Kooco.Pikachu.Blazor.Pages.Components.Icons
 @using Kooco.Pikachu.Localization
 @using Kooco.Pikachu.Permissions
-@using Kooco.Pikachu.WebsiteManagement
+@using Kooco.Pikachu.WebsiteManagement.TopbarSettings
 @using Volo.Abp.AspNetCore.Components.Web
 @attribute [Authorize(PikachuPermissions.WebsiteManagement.TopbarSettings)]
 @inherits PikachuComponentBase
