--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/CreateGroupBuy.razor
@@ -767,8 +767,8 @@
                 <label class="form-check-label" for="payment-gateway-1">
                 @L["DefaultPaymentGateWay"]
                 </label> *@
-                <Check TValue="bool" Disabled=@CreateGroupBuyDto.IsEnterprise @bind-Checked="@CreditCard">@L["CreditCard"]</Check>
-                <Check TValue="bool" Disabled=@CreateGroupBuyDto.IsEnterprise @bind-Checked="@BankTransfer">@L["BankTransfer"]</Check>
+                <Check TValue="bool" Disabled=@(CreateGroupBuyDto.IsEnterprise||isPaymentMethodEnabled()) @bind-Checked="@CreditCard">@L["CreditCard"]</Check>
+                <Check TValue="bool" Disabled=@(CreateGroupBuyDto.IsEnterprise||isPaymentMethodEnabled()) @bind-Checked="@BankTransfer">@L["BankTransfer"]</Check>
                 <Check TValue="bool"
                        @bind-Checked="@IsCashOnDelivery">
                     @L[PikachuResource.CashOnDelivery]
