--- a/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/GroupBuyManagement/EditGroupBuy.razor
@@ -1551,7 +1551,9 @@
 
                                     @if (module.GroupBuyModuleType is GroupBuyModuleType.ProductRankingCarouselModule)
                                     {
-                                        foreach (ProductRankingCarouselModule productModule in ProductRankingCarouselModules)
+                                        List<ProductRankingCarouselModule>productModules=ProductRankingCarouselModules.Where(x=>x.ModuleNumber==module.ModuleNumber).ToList();
+                                      
+                                        foreach (ProductRankingCarouselModule productModule in productModules)
                                         {
                                             <Div Class="col-12 d-flex">
                                                 <Div Class="col-5">
@@ -1715,6 +1717,7 @@
                                                                     <Div Class="col-12">
                                                                         <Div Class="image-list-container d-block flex-nowrap">
                                                                             <Div Class="d-flex flex-wrap">
+
                                                                                 @foreach (CreateImageDto image in productModule.Images)
                                                                                 {
                                                                                     <Div Class="image-container">
@@ -1760,6 +1763,7 @@
 
                                     @if (module.GroupBuyModuleType is not GroupBuyModuleType.ProductRankingCarouselModule)
                                     {
+
                                         <div class="row mt-2">
                                             @if (module.GroupBuyModuleType is GroupBuyModuleType.ProductGroupModule)
                                             {
