#PK-843 Fix Order Details page

--- a/src/Kooco.Pikachu.Blazor/Pages/Orders/Order.razor
+++ b/src/Kooco.Pikachu.Blazor/Pages/Orders/Order.razor
@@ -503,7 +503,7 @@
                                                                     <br />
 
                                                                     @{
-                                                                        List<string> setItemNames = [.. item.Spec.Split(", ")];
+                                                                        List<string> setItemNames = (item.Spec != null ? [.. item.Spec.Split(", ")] : []);
                                                                     }
 
                                                                     @foreach (string setItemName in setItemNames)
